# k45_simulation

./: .gitignore  README.md  pyproject.toml
src/airflow/: requirements.txt
src/airflow/dags/: update_car_prices_etl_dag.py
src/prices/: 002_live_db_compose.yml  004_fake_ad_generator.py  005_pyspark_stream_prices.ipynb
src/prices/data/: init.sql
src/shared/output/: stream_result.csv  transformed.csv
